--- a/Movie.html
+++ b/Movie.html
@@ -1,1 +1,3 @@
-
+<h1 style="color:#cc66ff;background-color:powderblue">นี่คือหน้าแสดงงาน</h1>
+<a href="study">คลิกเพื่อกลับไปหน้าหลัก</a> <br>
+<a href="phet.html">คลิกเพื่อเปิดดูวิดิโอที่ฉันชอบ</a> <br>
