--- a/video.html
+++ b/video.html
@@ -9,5 +9,5 @@ allowfullscreen>
 </iframe>
 
 <br>
-<a href="home.html">กลับหน้าหลัก</a> <br>
+<a href="index.html">กลับหน้าหลัก</a> <br>
 <a href="travel.html">กลับหน้าสถานที่</a> <br>
