--- a/travel.html
+++ b/travel.html
@@ -4,6 +4,6 @@
 หาดทรายขาว น้ำใส บรรยากาศดี เหมาะกับการพักผ่อนช่วงวันหยุด
 </h2>
 
-<a href="home.html">กลับหน้าหลัก</a> <br>
+<a href="index.html">กลับหน้าหลัก</a> <br>
 <a href="video.html">ไปดูวิดีโอ</a> <br>
 <a href="gallery.html">ไปดูแกลเลอรี่</a> <br>
