Update link to home page in last.html

--- a/last.html
+++ b/last.html
@@ -4,4 +4,4 @@
 ขอบคุณที่เข้ามาเยี่ยมชมเว็บไซต์ท่องเที่ยวทะเลของเรา
 </h2>
 
-<a href="home.html">กลับหน้าหลัก</a> <br>
+<a href="index.html">กลับหน้าหลัก</a> <br>
