--- a/video.html
+++ b/video.html
@@ -1,7 +1,7 @@
 <h1 style="color:#cc66ff;background-color:#f2e6ff">วิดีโอทะเลสวย ๆ</h1>
 
 <iframe width="560" height="315" 
-src="<iframe width="560" height="315" src="https://www.youtube.com/embed/K1QICrgxTjA?si=oc1YPY8bMmq3d4m7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" 
+src="<iframe width="560" height="315" src="https://youtu.be/K1QICrgxTjA?si=BNykEnpxKred75RO" 
 title="YouTube video player" 
 frameborder="0" 
 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
