--- a/video.html
+++ b/video.html
@@ -11,3 +11,4 @@ allowfullscreen>
 <br>
 <a href="index.html">กลับหน้าหลัก</a> <br>
 <a href="travel.html">กลับหน้าสถานที่</a> <br>
+<a href="story.html">คลิกเพื่ออ่านเรื่องราวเกี่ยวกับทะเล</a> <br>
