--- a/story.html
+++ b/story.html
@@ -8,4 +8,5 @@
 </h2>
 
 <a href="index.html">กลับหน้าหลัก</a> <br>
+<a href="video.html">คลิกเพื่อกลับไปดูวิดีโอทะเลสวย ๆ</a> <br>
 <a href="last.html">ไปหน้าสุดท้าย</a> <br>
