--- a/story.html
+++ b/story.html
@@ -9,4 +9,5 @@
 
 <a href="index.html">กลับหน้าหลัก</a> <br>
 <a href="video.html">คลิกเพื่อกลับไปดูวิดีโอทะเลสวย ๆ</a> <br>
+<a href="travel.html">คลิกเพื่อกลับไปดูสถานที่ท่องเที่ยว</a> <br>
 <a href="last.html">ไปหน้าสุดท้าย</a> <br>
