--- a/last.html
+++ b/last.html
@@ -5,4 +5,6 @@
 </h2>
 
 <a href="index.html">กลับหน้าหลัก</a> <br>
+<a href="video.html">คลิกเพื่อกลับไปดูวิดีโอทะเลสวย ๆ</a> <br>
+<a href="travel.html">คลิกเพื่อกลับไปดูสถานที่ท่องเที่ยว</a> <br>
 <a href="sae.html">คลิกเพื่อดูที่เที่ยวทะเล</a> <br>
