--- a/video.html
+++ b/video.html
@@ -1,13 +1,15 @@
 <h1 style="color:#cc66ff;background-color:#f2e6ff">วิดีโอทะเลสวย ๆ</h1>
 
-<iframe width="560" height="315" 
-src="<iframe width="560" height="315" src="https://youtu.be/K1QICrgxTjA?si=BNykEnpxKred75RO" 
-title="YouTube video player" 
-frameborder="0" 
-allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-allowfullscreen>
+<iframe 
+    width="560" 
+    height="315" 
+    src="https://www.youtube.com/embed/5p_SuO96Jd4?si=w0BzbnIAgY1DZeoH" 
+    title="YouTube video player" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" 
+    allowfullscreen>
 </iframe>
-
 <br>
 <a href="index.html">กลับหน้าหลัก</a> <br>
 <a href="travel.html">กลับหน้าสถานที่</a> <br>
