--- a/last.html
+++ b/last.html
@@ -1,4 +1,4 @@
-<h1 style="color:#cc66ff;background-color:powderblue">หน้าสุดท้าย</h1>
+<h1 style="color:#cc66ff;background-color:powderblue">หน้าสุดท้ายแต่ไม่ท้ายสุด คลิกอันล่างสุดต่อสิ</h1>
 
 <h2 style="color:#6600cc;background-color:#e6ccff">
 ขอบคุณที่เข้ามาเยี่ยมชมเว็บไซต์ท่องเที่ยวทะเลของเรา
